// Protobuf service communicating with agents
// protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative */*.proto
syntax = "proto3";
package btedrpb;
option go_package = "github.com/devilsec/btedr/proto/agentpb";

import "taskpb/task.proto";

// The service to interact with agents
service AgentRPC {
  rpc Register (Registration) returns (Empty);
  // Retrieve a task from the server (beacon mode)
  rpc GetTask (Request) returns (taskpb.Task);
  rpc TaskResult (Result) returns (Empty);
}

message Empty {}

message Registration {
  string id = 1;
  string os = 2;
  string ip = 3;
  string hostname = 4;
  string uid = 5;
  string guid = 6;
  repeated string users = 7;
}

// A task request
message Request {
  string agentid = 1;
}

message Result {
  string taskid = 1;
  string agentid = 2;
  taskpb.Type type = 3;
}
